Fix to disable horizontal scrolling due to circle going off page

--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -1,3 +1,7 @@
+html, body {
+  overflow-x: hidden;
+}
+
 body {
   font-family: 'Roboto', sans-serif !important;
   font-size: 1.1rem;
